App contact iniciada

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -8,4 +8,5 @@
 <a href="{% url 'accounts:login' %}">Login</a>
 <a href="{% url 'accounts:register' %}">Register</a>
 {% endif %}
+<a href="{% url 'contact:contact' %}">Contact</a>
 {% endblock %}
